--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,8 @@
     "wakatime.vscode-wakatime",
     "mehedidracula.php-namespace-resolver",
     "eamodio.gitlens",
-    "vivaxy.vscode-conventional-commits"
+    "vivaxy.vscode-conventional-commits",
+    "ms-vscode-remote.remote-containers",
+    "yzhang.markdown-all-in-one"
   ]
 }
