feat: add eslint, improve devcontainer.json and php-cs-fixers*

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,6 +6,14 @@
     "eamodio.gitlens",
     "vivaxy.vscode-conventional-commits",
     "ms-vscode-remote.remote-containers",
-    "yzhang.markdown-all-in-one"
+    "yzhang.markdown-all-in-one",
+    "streetsidesoftware.code-spell-checker",
+    "streetsidesoftware.code-spell-checker-portuguese-brazilian",
+    "junstyle.php-cs-fixer",
+    "bmewburn.vscode-intelephense-client",
+    "neilbrayfield.php-docblocker",
+    "dbaeumer.vscode-eslint",
+    "aswinkumar863.smarty-template-support",
+    "ms-vscode-remote.remote-containers"
   ]
 }
