--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,91 +1,160 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 {
   "name": "PHP",
+  // https: //github.com/devcontainers/images/tree/main/src/php
   "image": "mcr.microsoft.com/vscode/devcontainers/php:8.1",
-  "mounts": [
-    {
-      "source": "/home/brunoferreira/projects/wordpress-6.1.1",
-      "target": "/home/vscode/_wordpress",
-      "type": "bind"
+  "features": {
+    // https://github.com/devcontainers/features/tree/main/src/node
+    "ghcr.io/devcontainers/features/node:1": {
+      "version": "18.14.0",
+      "nvmVersion": "0.39.3"
     }
-  ],
+  },
+  "postCreateCommand": "npm install",
   "customizations": {
     "vscode": {
       "extensions": [
         "junstyle.php-cs-fixer",
+        "bmewburn.vscode-intelephense-client",
         "neilbrayfield.php-docblocker",
-        "bmewburn.vscode-intelephense-client"
+        "dbaeumer.vscode-eslint",
+        "aswinkumar863.smarty-template-support"
       ],
       "settings": {
-        "intelephense.environment.phpVersion": "8.1",
-        // "intelephense.environment.phpVersion": "7.4",
-        "php-cs-fixer.config": ".php-cs-fixer.php",
-        "files.eol": "\n",
-        "files.encoding": "utf8",
-        "php.suggest.basic": false,
-        "[php]": {
-          "editor.indentSize": "tabSize",
-          "editor.detectIndentation": false,
-          "editor.defaultFormatter": "junstyle.php-cs-fixer",
-          "editor.insertSpaces": true,
-          "editor.tabSize": 4,
+        "[html]": {
           "editor.rulers": [
+            120
+          ],
+          "editor.tabSize": 4
+        },
+        "[javascript]": {
+          "editor.defaultFormatter": "junstyle.php-cs-fixer",
+          "editor.rulers": [
+            80,
             120
           ]
         },
+        "[php]": {
+          "editor.defaultFormatter": "junstyle.php-cs-fixer",
+          "editor.rulers": [
+            80,
+            120
+          ]
+        },
+        "[smarty]": {
+          "editor.rulers": [
+            120
+          ],
+          "editor.tabSize": 4,
+          "editor.wrappingIndent": "deepIndent",
+          "editor.wrappingStrategy": "advanced"
+        },
+        "editor.codeActionsOnSave": {
+          "source.fixAll.eslint": true
+        },
+        "editor.formatOnSave": true,
+        "files.encoding": "utf8",
+        "files.eol": "\n",
+        "html.format.wrapAttributes": "force-expand-multiline",
+        "html.format.wrapAttributesIndentSize": 4,
+        "html.format.wrapLineLength": 120,
+        "intelephense.completion.maxItems": 10,
+        "intelephense.environment.documentRoot": "src",
+        "intelephense.environment.phpVersion": "8.1",
+        "intelephense.files.associations": [
+          "*.php"
+        ],
+        // For more stubs, see: https://github.com/bmewburn/intelephense-docs/blob/master/gettingStarted.md#environment
+        "intelephense.stubs": [
+          "wordpress",
+          "apache",
+          "bcmath",
+          "bz2",
+          "calendar",
+          "com_dotnet",
+          "Core",
+          "ctype",
+          "curl",
+          "date",
+          "dba",
+          "dom",
+          "enchant",
+          "exif",
+          "FFI",
+          "fileinfo",
+          "filter",
+          "fpm",
+          "ftp",
+          "gd",
+          "gettext",
+          "gmp",
+          "hash",
+          "iconv",
+          "imap",
+          "intl",
+          "json",
+          "ldap",
+          "libxml",
+          "mbstring",
+          "meta",
+          "mysqli",
+          "oci8",
+          "odbc",
+          "openssl",
+          "pcntl",
+          "pcre",
+          "PDO",
+          "pdo_ibm",
+          "pdo_mysql",
+          "pdo_pgsql",
+          "pdo_sqlite",
+          "pgsql",
+          "Phar",
+          "posix",
+          "pspell",
+          "readline",
+          "Reflection",
+          "session",
+          "shmop",
+          "SimpleXML",
+          "snmp",
+          "soap",
+          "sockets",
+          "sodium",
+          "SPL",
+          "sqlite3",
+          "standard",
+          "superglobals",
+          "sysvmsg",
+          "sysvsem",
+          "sysvshm",
+          "tidy",
+          "tokenizer",
+          "xml",
+          "xmlreader",
+          "xmlrpc",
+          "xmlwriter",
+          "xsl",
+          "Zend OPcache",
+          "zip",
+          "zlib"
+        ],
+        "namespaceResolver.showMessageOnStatusBar": true,
+        "namespaceResolver.sortAlphabetically": true,
+        "namespaceResolver.sortNatural": true,
+        "namespaceResolver.sortOnSave": true,
+        "php-cs-fixer.autoFixByBracket": true,
+        "php-cs-fixer.autoFixBySemicolon": true,
+        "php-cs-fixer.config": ".php-cs-fixer.php",
+        "php-cs-fixer.executablePath": "${extensionPath}/php-cs-fixer.phar",
         "php-cs-fixer.formatHtml": true,
         "php-cs-fixer.onsave": true,
-        "php-cs-fixer.executablePath": "${extensionPath}/php-cs-fixer.phar",
-        "php.validate.enable": false,
-        "php-docblocker.useShortNames": true,
-        "php-docblocker.qualifyClassNames": true,
-        "php-docblocker.paramDescription": true,
-        "php-docblocker.returnGap": true,
         "php-docblocker.alignParams": true,
         "php-docblocker.alignReturn": true,
-        "php-docblocker.gap": true,
-        "php-docblocker.defaultType": "string",
-        "php-docblocker.classTemplate": {
-          "message": {},
-          "since": {
-            "content": "@since 1.0.0",
-            "gapAfter": true,
-            "gapBefore": true
-          },
-          "link": {
-            "content": "@link "
-          }
-        },
-        "php-docblocker.functionTemplate": {
-          "message": {
-            "gapAfter": true
-          },
-          "since": {
-            "content": "@since 1.0.0"
-          },
-          "param": {
-            "gapBefore": true,
-            "gapAfter": true
-          },
-          "return": {}
-        },
-        "php-docblocker.propertyTemplate": {
-          "message": {
-            "gapAfter": true
-          },
-          "since": {
-            "content": "@since 1.0.0"
-          },
-          "var": {
-            "content": "@var ${1:mixed}"
-          },
-          "access": {
-            "access": "@access "
-          },
-          "link": {
-            "content": "@link "
-          }
-        }
+        "php-docblocker.useShortNames": true,
+        "php.suggest.basic": false,
+        "php.validate.enable": false,
+        "smarty.highlight": true
       }
     }
   }
